--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "express": "^4.17.1"
   },
   "scripts": {
-      "client": "npm start --prefix client",
-      "start": "npm start --prefix server",
-      "server": "nodemon index --prefix server",
-      "dev": "concurrently \"npm run server\" \"npm run client\"",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
+    "client": "npm start --prefix client",
+    "start": "npm start --prefix server",
+    "server": "nodemon index --prefix server",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.0.0"
   }
 }
