--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.0.0",
+    "install": "^0.13.0",
+    "npm": "^7.5.3"
   }
 }
