--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^8.2.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -12,9 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "webpack": "^5.21.2"
   },
   "scripts": {
     "client": "npm start --prefix client",
